crates/common/src/snapshots/common__asset_code_generation_test__tests__generate_edge_case_names.snap
---
source: crates/common/src/asset_code_generation_test.rs
expression: generated_code
---
// Generated asset code using builder-assets crate
// This file is auto-generated. Do not edit manually.

use builder_assets::*;

/// Provider function for loading asset data from filesystem
///
/// # Panics
/// Panics if the asset base path has not been configured using set_asset_base_path().
static LOAD_ASSET: fn(&str) -> Option<Vec<u8>> = load_asset;
fn load_asset(path: &str) -> Option<Vec<u8>> {
    let base_path = builder_assets::get_asset_base_path_or_panic();
    let full_path = base_path.join(path);
    std::fs::read(full_path).ok()
}

pub static ROBOTO_BOLD_2X_WOFF2: AssetSet = AssetSet {
    url_path: "/assets/roboto-bold@2x.woff2",
    file_path_parts: FilePathParts {
        folder: Some("assets"),
        name: "roboto-bold@2x",
        hash: Some("special_hash="),
        ext: "woff2",
    },
    available_encodings: &[Encoding::Identity],
    available_languages: None,
    mime: "font/woff2",
    provider: &LOAD_ASSET,
};

/// All available assets as a static array
pub static ASSETS: [&AssetSet; 1] = [
        &ROBOTO_BOLD_2X_WOFF2
];

/// Asset catalog for efficient URL-based lookups
pub fn get_asset_catalog() -> AssetCatalog {
    AssetCatalog::from_assets(&ASSETS)
}
