crates/common/src/snapshots/common__asset_code_generation_test__tests__generate_embed_provider.snap
---
source: crates/common/src/asset_code_generation_test.rs
expression: generated_code
---
// Generated asset code using builder-assets crate
// This file is auto-generated. Do not edit manually.

use builder_assets::*;
#[derive(Embed)]
#[folder = "/tmp/test"]
pub struct AssetFiles;


/// Provider function for loading embedded asset data
static LOAD_ASSET: fn(&str) -> Option<Vec<u8>> = load_asset;
fn load_asset(path: &str) -> Option<Vec<u8>> {
    AssetFiles::get(path).map(|f| f.data.into_owned())
}

pub static APP_JS: AssetSet = AssetSet {
    url_path: "/app.js",
    file_path_parts: FilePathParts {
        folder: Some("js"),
        name: "app",
        hash: Some("xyz789="),
        ext: "js",
    },
    available_encodings: &[Encoding::Identity, Encoding::Brotli],
    available_languages: None,
    mime: "application/javascript",
    provider: &LOAD_ASSET,
};

/// All available assets as a static array
pub static ASSETS: [&AssetSet; 1] = [
        &APP_JS
];

/// Asset catalog for efficient URL-based lookups
pub fn get_asset_catalog() -> AssetCatalog {
    AssetCatalog::from_assets(&ASSETS)
}
