crates/common/src/snapshots/common__asset_code_generation_test__tests__generate_filesystem_provider.snap
---
source: crates/common/src/asset_code_generation_test.rs
expression: generated_code
---
// Generated asset code using builder-assets crate
// This file is auto-generated. Do not edit manually.

use builder_assets::*;
use icu_locid::langid;
use std::path::Path;

/// Provider function for loading asset data from filesystem
///
/// # Panics
/// Panics if the asset base path has not been configured using set_asset_base_path().
fn load_asset(path: &str) -> Option<Vec<u8>> {
    let base_path = builder_assets::get_asset_base_path_or_panic();
    let full_path = base_path.join(path);
    std::fs::read(full_path).ok()
}

pub static STYLE_CSS: AssetSet = AssetSet {
    url_path: "/style.css",
    file_path_parts: FilePathParts {
        folder: None,
        name: "style",
        hash: Some("abc123="),
        ext: "css",
    },
    available_encodings: &[Encoding::Identity, Encoding::Brotli],
    available_languages: None,
    mime: "text/css",
    provider: &load_asset,
};

/// All available assets as a static array
pub static ASSETS: [&AssetSet; 1] = [
        &STYLE_CSS
];

/// Asset catalog for efficient URL-based lookups
pub fn get_asset_catalog() -> AssetCatalog {
    AssetCatalog::from_assets(&ASSETS)
}
