crates/common/src/snapshots/common__asset_code_generation_test__tests__generate_multilingual_asset_code.snap
---
source: crates/common/src/asset_code_generation_test.rs
expression: generated_code
---
// Generated asset code using builder-assets crate
// This file is auto-generated. Do not edit manually.

use builder_assets::*;

/// Provider function for loading asset data from filesystem
///
/// # Panics
/// Panics if the asset base path has not been configured using set_asset_base_path().
static LOAD_ASSET: fn(&str) -> Option<Vec<u8>> = load_asset;
fn load_asset(path: &str) -> Option<Vec<u8>> {
    let base_path = builder_assets::get_asset_base_path_or_panic();
    let full_path = base_path.join(path);
    std::fs::read(full_path).ok()
}

pub static BUTTON_CSS: AssetSet = AssetSet {
    url_path: "/components/button.css",
    file_path_parts: FilePathParts {
        folder: Some("components"),
        name: "button",
        hash: Some("def456="),
        ext: "css",
    },
    available_encodings: &[Encoding::Identity, Encoding::Brotli, Encoding::Gzip],
    available_languages: Some(&[langid!("en"), langid!("fr"), langid!("de")]),
    mime: "text/css",
    provider: &LOAD_ASSET,
};

/// All available assets as a static array
pub static ASSETS: [&AssetSet; 1] = [
        &BUTTON_CSS
];

/// Asset catalog for efficient URL-based lookups
pub fn get_asset_catalog() -> AssetCatalog {
    AssetCatalog::from_assets(&ASSETS)
}
