crates/common/src/snapshots/common__asset_code_generation_test__tests__generate_multiple_assets_code.snap
---
source: crates/common/src/asset_code_generation_test.rs
expression: generated_code
---
// Generated asset code using builder-assets crate
// This file is auto-generated. Do not edit manually.

use builder_assets::*;

/// Provider function for loading asset data from filesystem
///
/// # Panics
/// Panics if the asset base path has not been configured using set_asset_base_path().
static LOAD_ASSET: fn(&str) -> Option<Vec<u8>> = load_asset;
fn load_asset(path: &str) -> Option<Vec<u8>> {
    let base_path = builder_assets::get_asset_base_path_or_panic();
    let full_path = base_path.join(path);
    std::fs::read(full_path).ok()
}

pub static FAVICON_ICO: AssetSet = AssetSet {
    url_path: "/favicon.ico",
    file_path_parts: FilePathParts {
        folder: None,
        name: "favicon",
        hash: None,
        ext: "ico",
    },
    available_encodings: &[Encoding::Identity],
    available_languages: None,
    mime: "image/x-icon",
    provider: &LOAD_ASSET,
};

pub static APP_JS: AssetSet = AssetSet {
    url_path: "/js/app.js",
    file_path_parts: FilePathParts {
        folder: Some("js"),
        name: "app",
        hash: Some("hash123="),
        ext: "js",
    },
    available_encodings: &[Encoding::Brotli, Encoding::Gzip],
    available_languages: None,
    mime: "application/javascript",
    provider: &LOAD_ASSET,
};

pub static MESSAGES_JSON: AssetSet = AssetSet {
    url_path: "/messages.json",
    file_path_parts: FilePathParts {
        folder: None,
        name: "messages",
        hash: Some("xyz789="),
        ext: "json",
    },
    available_encodings: &[Encoding::Identity, Encoding::Gzip],
    available_languages: Some(&[langid!("en"), langid!("fr"), langid!("es-MX")]),
    mime: "application/json",
    provider: &LOAD_ASSET,
};

pub static STYLE_CSS: AssetSet = AssetSet {
    url_path: "/style.css",
    file_path_parts: FilePathParts {
        folder: None,
        name: "style",
        hash: None,
        ext: "css",
    },
    available_encodings: &[Encoding::Identity],
    available_languages: None,
    mime: "text/css",
    provider: &LOAD_ASSET,
};

/// All available assets as a static array
pub static ASSETS: [&AssetSet; 4] = [
        &FAVICON_ICO,
        &APP_JS,
        &MESSAGES_JSON,
        &STYLE_CSS
];

/// Asset catalog for efficient URL-based lookups
pub fn get_asset_catalog() -> AssetCatalog {
    AssetCatalog::from_assets(&ASSETS)
}
